Add page pre-loader

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,6 +1,6 @@
-/* --------------------------------------------------------------
-# TABLE OF CONTENTS:
-------------------------------------------------------------------
+/*********************************************************************************
+* TABLE OF CONTENTS:
+**********************************************************************************
 # Normalize
 # Import Modules
 # Typography
@@ -22,56 +22,57 @@
 	## Galleries
 */
 
-/* --------------------------------------------------------------
-# Normalize
--------------------------------------------------------------- */
+/*********************************************************************************
+* Normalize
+******************************************************************************** */
 @import 'normalize';
 
-/* --------------------------------------------------------------
-# Import Modules
--------------------------------------------------------------- */
+/*********************************************************************************
+* Import Modules
+******************************************************************************** */
 @import '~bootstrap/scss/bootstrap';
 
-/* --------------------------------------------------------------
-# Typography
--------------------------------------------------------------- */
+/*********************************************************************************
+* Typography
+******************************************************************************** */
 
-/* --------------------------------------------------------------
-# Elements
--------------------------------------------------------------- */
+/*********************************************************************************
+* Elements
+******************************************************************************** */
+@import 'elements/page-pre-loader';
 
-/* --------------------------------------------------------------
-# Forms
--------------------------------------------------------------- */
+/*********************************************************************************
+* Forms
+******************************************************************************** */
 
-/* --------------------------------------------------------------
-# Navigation
--------------------------------------------------------------- */
+/*********************************************************************************
+* Navigation
+******************************************************************************** */
 
-/* --------------------------------------------------------------
-# Accessibility
--------------------------------------------------------------- */
+/*********************************************************************************
+* Accessibility
+******************************************************************************** */
 
-/* --------------------------------------------------------------
-# Alignments
--------------------------------------------------------------- */
+/*********************************************************************************
+* Alignments
+******************************************************************************** */
 
-/* --------------------------------------------------------------
-# Clearings
--------------------------------------------------------------- */
+/*********************************************************************************
+* Clearings
+******************************************************************************** */
 
-/* --------------------------------------------------------------
-# Widgets
--------------------------------------------------------------- */
+/*********************************************************************************
+* Widgets
+******************************************************************************** */
 
-/* --------------------------------------------------------------
-# Content
--------------------------------------------------------------- */
+/*********************************************************************************
+* Content
+******************************************************************************** */
 
-/* --------------------------------------------------------------
-# Infinite scroll
--------------------------------------------------------------- */
+/*********************************************************************************
+* Infinite scroll
+******************************************************************************** */
 
-/* --------------------------------------------------------------
-# Media
--------------------------------------------------------------- */
+/*********************************************************************************
+* Media
+******************************************************************************** */
