Add sticky navigation

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -48,6 +48,7 @@
 /*********************************************************************************
 * Navigation
 ******************************************************************************** */
+@import 'navigation/navigation';
 
 /*********************************************************************************
 * Accessibility
