--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -31,6 +31,7 @@
 * Import Modules
 ******************************************************************************** */
 @import '~bootstrap/scss/bootstrap';
+@import '~font-awesome/scss/font-awesome';
 
 /*********************************************************************************
 * Typography
