Add custom style for footer

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,7 +1,6 @@
 /*********************************************************************************
 * TABLE OF CONTENTS:
 **********************************************************************************
-# Normalize
 # Import Modules
 # Typography
 # Elements
@@ -21,11 +20,6 @@
 	## Captions
 	## Galleries
 */
-
-/*********************************************************************************
-* Normalize
-******************************************************************************** */
-@import 'normalize';
 
 /*********************************************************************************
 * Import Modules
@@ -70,6 +64,7 @@
 /*********************************************************************************
 * Content
 ******************************************************************************** */
+@import 'site/site';
 
 /*********************************************************************************
 * Infinite scroll
