--- a/assets/styles/variables/_colors.scss
+++ b/assets/styles/variables/_colors.scss
@@ -1,2 +1,36 @@
+/*********************************************************************************
+* General
+******************************************************************************** */
+$white: #fff;
+
+/*********************************************************************************
+* Pre Loader
+******************************************************************************** */
 $pre-loader-color: #99c24d;
 $pre-loader-bg-color: #fefefe;
+
+/*********************************************************************************
+* Navigation
+******************************************************************************** */
+$navigation-link-color: #999;
+$navigation-link-hover-color: #a0ce4e;
+$navigation-border-color: #dadada;
+$dropdown-item-color: #333;
+$dropdown-item-bg-color: #f9f9f9;
+
+/*********************************************************************************
+* Top header bar
+******************************************************************************** */
+$header-top-bar-bg-color: #f6f6f6;
+$header-top-bar-color: #333;
+$header-border-bottom-color: #d2d3d4;
+$header-wrapper-color: #747474;
+
+/*********************************************************************************
+* Footer
+******************************************************************************** */
+$footer-widget-bg-color: #363839;
+$footer-widget-color: #ccc;
+$footer-widget-link-color: #999;
+$footer-widget-link-hover-color: #a0ce4e;
+$footer-copyright-bg-color: #333;
