Add custom options and style for pagination

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -44,6 +44,7 @@
 * Navigation
 ******************************************************************************** */
 @import 'navigation/navigation';
+@import 'navigation/pagination';
 
 /*********************************************************************************
 * Accessibility
