--- a/assets/styles/variables/_colors.scss
+++ b/assets/styles/variables/_colors.scss
@@ -12,6 +12,12 @@ $pre-loader-color: #99c24d;
 $pre-loader-bg-color: #fefefe;
 
 /*********************************************************************************
+* Pagination
+******************************************************************************** */
+$pagination-color: #99c24d;
+$pagination-link-color: #747474;
+
+/*********************************************************************************
 * Navigation
 ******************************************************************************** */
 $navigation-link-color: #999;
