--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -9,10 +9,10 @@
   margin-bottom: 10px;
 }
 
-.universal-loading-container > .fa {
-  text-align: center;
-  margin-bottom: 10px;
-}
+.universal-load-more-button {
+  color: #656269;
+  background-color: #f1f2f4;
+} // .universal-load-more-button
 
 article.post {
   position: relative;
@@ -36,7 +36,8 @@ article.post {
       width: auto;
       max-width: 100%;
     }
-  } // .entry-thumbnail
+  }
+  // .entry-thumbnail
 
   .entry-body {
     padding: 12px 30px 20px;
@@ -79,7 +80,8 @@ article.post {
             line-height: 60px;
             font-size: 24px;
           }
-        } // .entry-day
+        }
+        // .entry-day
 
         .entry-month {
           display: block;
@@ -93,9 +95,12 @@ article.post {
             height: 45px;
             line-height: 45px;
           }
-        } // .entry-month
-      } // .universal__date-box
-    } // .entry-date
+        }
+        // .entry-month
+      }
+      // .universal__date-box
+    }
+    // .entry-date
 
     .entry-header {
       overflow: hidden;
@@ -125,13 +130,15 @@ article.post {
           }
         }
       }
-    } // .entry-header
+    }
+    // .entry-header
 
     .entry-excerpt {
       overflow: hidden;
       color: $blog-excerpt-color;
     }
-  } // .entry-body
+  }
+  // .entry-body
 
   .post-categories {
     list-style: none;
@@ -190,7 +197,8 @@ article.post {
         }
       }
     }
-  } // .post-categories
+  }
+  // .post-categories
 
   .entry-footer {
     clear: both;
@@ -248,8 +256,11 @@ article.post {
         text-decoration: none;
       }
     }
-  } // .entry-footer
-} // article.post
+  }
+  // .entry-footer
+}
+
+// article.post
 
 article.has-post-thumbnail {
   .entry-date {
@@ -262,5 +273,8 @@ article.has-post-thumbnail {
       left: 20px;
       margin: 0;
     }
-  } // .entry-date
-} // article.has-post-thumbnail
+  }
+  // .entry-date
+}
+
+// article.has-post-thumbnail
