--- a/assets/styles/variables/_colors.scss
+++ b/assets/styles/variables/_colors.scss
@@ -2,6 +2,7 @@
 * General
 ******************************************************************************** */
 $white: #fff;
+$text-color: #656269;
 $link-color: #999;
 $link-hover-color: #a0ce4e;
 
@@ -25,6 +26,11 @@ $navigation-link-hover-color: #a0ce4e;
 $navigation-border-color: #dadada;
 $dropdown-item-color: #333;
 $dropdown-item-bg-color: #f9f9f9;
+
+/*********************************************************************************
+* Single post navigation
+******************************************************************************** */
+$sp-navigation-border-color: #d2d2dd;
 
 /*********************************************************************************
 * Top header bar
