--- a/assets/styles/site/primary/_posts-and-pages.scss
+++ b/assets/styles/site/primary/_posts-and-pages.scss
@@ -352,3 +352,48 @@ article.universal-single-post {
     }
   } // .universal__pagination
 } // .universal__single-post-navigation
+
+/*********************************************************************************
+* Single post social share
+******************************************************************************** */
+.universal-sharing-box {
+  background-color: $color_f1f2;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  border-radius: 5px;
+  margin: 25px 0;
+
+  &__title {
+    color: $color_333;
+    font-size: 20px;
+    line-height: 20px;
+    margin: 0;
+    padding: 27px 10px;
+  }
+
+  &__wrapper {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  &__link {
+    background-color: $color_e8;
+    padding: 5px;
+    margin: 0 5px;
+    border-radius: 5px;
+
+    a {
+      color: $link-color;
+      padding: 5px;
+      font-size: 16px;
+
+      &:hover {
+        color: $link-hover-color;
+      }
+    }
+  }
+}
