--- a/assets/styles/variables/_colors.scss
+++ b/assets/styles/variables/_colors.scss
@@ -9,6 +9,7 @@ $color_333: #333;
 $color_f6: #f6f6f6;
 $color_f1f2: #f1f2f4;
 $color_e8: #e8e8e8;
+$border_color: #d2d2dd;
 
 /*********************************************************************************
 * Pre Loader
@@ -34,7 +35,7 @@ $dropdown-item-bg-color: #f9f9f9;
 /*********************************************************************************
 * Single post navigation
 ******************************************************************************** */
-$sp-navigation-border-color: #d2d2dd;
+$sp-navigation-border-color: $border_color;
 
 /*********************************************************************************
 * Top header bar
@@ -49,12 +50,11 @@ $header-wrapper-color: #747474;
 ******************************************************************************** */
 $blog-posted-on-bg-color: $link-hover-color;
 $blog-categories-bg-color: $link-hover-color;
-$blog-article-bg-color: #f8f9fa;
-$blog-article-border-color: #d2d2dd;
+$blog-article-border-color: $border_color;
 $blog-title-border-color: #d9d9d9;
-$blog-excerpt-color: #656269;
+$blog-excerpt-color: $text-color;
 $blog-article-footer-bg-color: #f1f2f4;
-$blog-footer-color: #656269;
+$blog-footer-color: $text-color;
 
 /*********************************************************************************
 * Footer
