BEM and fix template commnet

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -4,6 +4,7 @@
 # Import Modules
 # Typography
 # Elements
+  ## Page pre loader
 # Forms
 # Navigation
 	## Links
@@ -13,8 +14,7 @@
 # Clearings
 # Widgets
 # Content
-	## Posts and pages
-	## Comments
+	## Site
 # Infinite scroll
 # Media
 	## Captions
