--- a/assets/styles/site/_site.scss
+++ b/assets/styles/site/_site.scss
@@ -1,4 +1,5 @@
 @import 'primary/page-header';
 @import 'primary/page-section';
 @import 'primary/posts-and-pages';
+@import 'header';
 @import 'footer';
