Fix pagination and add comments navigation

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -7,8 +7,10 @@
   ## Page pre loader
 # Forms
 # Navigation
-	## Links
 	## Menus
+	## Pagination
+	## Single post navigation
+	## Comment navigation
 # Accessibility
 # Alignments
 # Clearings
@@ -44,7 +46,6 @@
 * Navigation
 ******************************************************************************** */
 @import 'navigation/navigation';
-@import 'navigation/pagination';
 
 /*********************************************************************************
 * Accessibility
