--- a/assets/styles/navigation/_pagination.scss
+++ b/assets/styles/navigation/_pagination.scss
@@ -1,6 +1,6 @@
 @import '../variables/variables';
 
-.universal-pagination-holder {
+.universal__pagination-holder {
   .page-item {
     padding: 0 5px;
 
@@ -31,4 +31,20 @@
       border-top-right-radius: 0;
     }
   } // .page-item
+} // .universal__pagination-holder
+
+/*********************************************************************************
+* Infinite scroll button
+******************************************************************************** */
+.universal__loading-container,
+.universal__loading-container-load-message,
+#infscr-loading {
+  display: block;
+  text-align: center;
+  margin-bottom: 10px;
 }
+
+.universal__load-more-button {
+  color: #656269;
+  background-color: #f1f2f4;
+} // .universal-load-more-button
